hphp/test/slow/reflection/ReflectionType-basic-explicit-php7.php.expectf
--Function nfoo - Parameter--

bool(true)
bool(true)
string(7) "?HH\int"
bool(true)

--Function nfoo - Return--

bool(true)
bool(true)
string(8) "?HH\bool"
bool(true)

--Function foo - Parameter--

bool(true)
bool(true)
string(6) "HH\int"
bool(false)

--Function foo - Return--

bool(true)
bool(true)
string(7) "HH\bool"
bool(false)


--Call Constructor Directly--

bool(false)

Fatal error: ReflectionType::__construct(): Internal error: Failed to retrieve the reflection object in %s/test/slow/reflection/ReflectionType-basic-explicit-php7.php on line 46